--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/20.users/groups_and_permissions.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/20.users/groups_and_permissions.mdx
@@ -1,45 +1,44 @@
 ---
-title: Users groups and permissions
+title: Groupes et permissions
 ---
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-You can access the *groups and permissions* management interface from the webadmin
-by going into the 'Users' section and clicking the corresponding button:
+Vous pouvez accéder à l'interface de gestion des *groupes et des permissions* depuis l'admin web en allant dans la section "Utilisateurs" et en cliquant sur le bouton correspondant :
 
 ![screenshot of users permission button](/img/button_to_go_to_permission_interface.png)
 
-## Managing groups
+## Gestion des groupes
 
-The group mechanism can be used to define groups of users which then can be used to restrict permissions for applications and other services (such as mail or XMPP). Note that it is *not* mandatory to create a group to do so: you can also restrict access to an app or service on a user-per-user basis.
+Le mécanisme de groupe peut être utilisé pour définir des groupes d'utilisateurs qui peuvent ensuite être utilisés pour restreindre les autorisations pour les applications et autres services (tels que l'email ou XMPP). Notez qu'il n'est *pas* obligatoire de créer un groupe pour ce faire : vous pouvez également restreindre l'accès à une application ou à un service de manière individuelle.
 
-Using groups is however useful for semantics, for example if you host multiple groups of friends, associations or businesses on your server, you might want to create groups like `association1` and `association2` and add members of each association to the relevant group.
+L'utilisation de groupes est cependant utile pour la sémantique, par exemple si vous hébergez plusieurs groupes d'amis, des associations ou des entreprises sur votre serveur, vous pouvez créer des groupes comme `association1` et `association2` et ajouter les membres de chaque association au groupe concerné.
 
-It's also possible to define mail aliases for a group, such that mails sent to `groupe@domain.tld` will be dispatched to all members of the group.
+Il est également possible de définir des alias mail pour un groupe, afin que les mails envoyés à `groupe@domain.tld` soient redirigés vers tous les membres du groupe.
 
-### Default groups
+### Groupes par défaut
 
-By default, these special groups are created:
+Par défaut, deux groupes spéciaux sont créés :
 
-- `all_users`, that contain all users registered on YunoHost,
-- `visitors`, that applies to people viewing the server while not logged in.
-- `admins`, that contains YunoHost administrators, who will have SSH access as well as to the webadmin.
+- `all_users`, qui contient tous les utilisateurs enregistrés sur YunoHost,
+- `visitors`, c'est-à-dire les personnes qui consultent le serveur sans être connectées.
+- `admins`, ce groupe permet de gérer les administrateurs de la machine, chaque utilisateur aura alors (selon la configuration du serveur) accès en SSH ainsi que la webadmin.
 
-The content of those groups cannot be changed, only the permissions given to them.
+Vous ne pouvez pas changer le contenu de ces groupes, seulement les permissions qui leur sont accordées.
 
-### List existing groups
+### Lister les groupes existants
 
 <Tabs groupId="admin-commands">
 <TabItem value="web" label="From the web interface">
-The existing groups are listed at the top of the *groups and permissions* page.
+Les groupes existants sont listés en haut de la page *groupes et autorisations*.
 
 ![](/img/groups_default-groups.png)
 
 </TabItem>
 <TabItem value="cli" label="From the command line">
 
-To list the currently existing groups in CLI :
+Pour obtenir la liste des groupes existants en ligne de commande :
 
 ```bash
 yunohost user group list
@@ -55,19 +54,17 @@ groups:
 </TabItem>
 </Tabs>
 
-### Creating a new group
+### Créer un nouveau groupe
 
 <Tabs groupId="admin-commands">
 <TabItem value="web" label="From the web interface">
-
-To create a new group, simply click on the "New Group" button at the top of the page. You may only choose a name formed with letters (uper- and lowercase) and spaces. The group is created empty and without any permission.
+Pour créer un nouveau groupe, il suffit de cliquer sur le bouton "Nouveau groupe" en haut de la page. Vous ne pouvez choisir qu'un nom formé de lettres (majuscules et minuscules) et d'espaces. Le groupe est créé vide et sans aucune permission.
 
 ![screenshot of new group button](/img/groups_button-new-group.png)
 
 </TabItem>
 <TabItem value="cli" label="From the command line">
-
-In CLI, to create a new group called `yolo_crew`
+Dans la ligne de commande, pour créer un nouveau groupe appelé `yolo_crew`, il faut utiliser
 
 ```bash
 yunohost user group create yolo_crew
@@ -76,31 +73,31 @@ yunohost user group create yolo_crew
 </TabItem>
 </Tabs>
 
-### Updating a group
+### Mettre à jour un groupe
 
 <Tabs groupId="admin-commands">
 <TabItem value="web" label="From the web interface">
 
-Let's add a first to this group: in the group panel, click the button "add a user" and scroll to the desired user, then click on it.
+Ajoutons un premier utilisateur à ce groupe : dans le panneau du groupe, cliquez sur le bouton "Ajouter un utilisateur" et faites défiler jusqu'à l'utilisateur souhaité, puis cliquez dessus.
 
 ![](/img/groups_button-add-user.png)
 
-To remove a user, click on the cross next to their username, in the group panel.
+Pour supprimer un utilisateur, cliquez sur la croix à côté de son nom d'utilisateur, dans le panneau du groupe.
 
 ![](/img/groups_button-remove-user.png)
 
 </TabItem>
 <TabItem value="cli" label="From the command line">
 
-In CLI, use the following command to add `charlie` and `delphine`to the `yolo_crew` group:
+En ligne de commande, utilisez la commande suivante pour ajouter `charlie` et `delphine` au groupe `yolo_crew` :
 
 ```bash
 yunohost user group add yolo_crew charlie delphine
 ```
 
-(similarly, `remove` can be used to remove members from a group)
+(De même, `remove` peut être utilisé pour retirer des membres d'un groupe.)
 
-Now in the group list we should see:
+Dans la liste des groupes, nous devrions voir :
 
 ```bash
 yunohost user group list
@@ -120,19 +117,19 @@ groups:
 </TabItem>
 </Tabs>
 
-### Deleting groups
+### Supprimer un groupe
 
 <Tabs groupId="admin-commands">
 <TabItem value="web" label="From the web interface">
 
-To delete a group, click on the red cross on the top right of the group panel. You will be asked for confirmation.
+Pour supprimer un groupe, cliquez sur la croix rouge en haut à droite du panneau du groupes. Une confirmation vous sera demandée.
 
 ![](/img/groups_button-delete-group.png)
 
 </TabItem>
 <TabItem value="cli" label="From the command line">
 
-To delete the group `yolo_crew` in CLI, you may run
+Pour supprimer le groupe `yolo_crew` en ligne de commande, vous pouvez exécuter :
 
 ```bash
 yunohost user group delete yolo_crew
@@ -141,23 +138,23 @@ yunohost user group delete yolo_crew
 </TabItem>
 </Tabs>
 
-## Managing permissions
+## Gestion des permissions
 
-The permission mechanism allow to restrict access to services (for example mail, XMPP...) and apps, or even specific parts of the apps (for example the administration interface of WordPress).
+Le mécanisme de permissions permet de restreindre l'accès aux services (par exemple mail, XMPP...) et aux applications, ou même à des parties spécifiques des applications (par exemple l'interface d'administration de WordPress).
 
-### List permissions
+### Liste des permissions
 
 <Tabs groupId="admin-commands">
 <TabItem value="web" label="From the web interface">
 
-The groups page lists the permissions given to each group, including the special groups `all_users` and `visitors`.
+La page des groupes liste les permissions données à chaque groupe, y compris les groupes spéciaux `all_users` et `visitors`.
 
 ![](/img/groups_default-with-permissions.png)
 
 </TabItem>
 <TabItem value="cli" label="From the command line">
 
-To list permissions and corresponding accesses in CLI:
+Pour répertorier les permissions et les accès correspondants en ligne de commande :
 
 ```bash
 yunohost user permission list
@@ -172,42 +169,42 @@ permissions:
     allowed: all_users
 ```
 
-Here, we find that all registered users can use email, XMPP, and access the WordPress blog. However, nobody can access the WordPress admin interface.
+Ici, nous constatons que tous les utilisateurs enregistrés peuvent utiliser le mail, XMPP, et accéder au blog WordPress. Cependant, personne ne peut accéder à l'interface d'administration de WordPress.
 
-More details can be displayed by adding the `--full` option which will display the list of users corresponding to groups allowed, as well as urls associated to a permission (relevant for web apps).
+Plus de détails peuvent être affichés en ajoutant l'option `--full` qui affichera la liste des utilisateurs correspondant aux groupes autorisés, ainsi que les adresses web associées à une permission (pertinent pour les applications web).
 
 </TabItem>
 </Tabs>
 
-### Add accesses to group or users
+### Ajouter des permissions à un groupe ou un utilisateur
 
 <Tabs groupId="admin-commands">
 <TabItem value="web" label="From the web interface">
 
-To add a permission to a group, simply click the "+" button in the group panel, scroll to the desired permission, then click on it.
+Pour ajouter une permission à un groupe, il suffit de cliquer sur le bouton "+" dans le panneau du groupe, de faire défiler jusqu'à la permission souhaitée, puis de cliquer dessus.
 
 ![](/img/groups_add-permission-group.png)
 
-Note that you can also allow a single user, by using the specific panel at the bottom of the page.
+Notez que vous pouvez également autoriser un seul utilisateur, en utilisant le panneau spécifique en bas de la page.
 
 ![](/img/groups_add-permission-user.png)
 
 </TabItem>
 <TabItem value="cli" label="From the command line">
 
-To allow a group to access the WordPress admin interface in CLI:
+Pour permettre à un groupe d'accéder à l'interface d'administration de WordPress via la ligne de commande :
 
 ```bash
 yunohost user permission update wordpress.admin --add yolo_crew
 ```
 
-Note that you can also allow a single user, by using the specific panel at the bottom of the page.
+Vous pouvez également autoriser un seul utilisateur :
 
 ```bash
 yunohost user permission update wordpress.admin --add alice
 ```
 
-And now we may see that both the YoloCrew and Alice have access to the WordPress admin interface:
+Et maintenant, nous pouvons voir que YoloCrew et Alice ont tous deux accès à l'interface d'administration de WordPress :
 
 ```bash
 yunohost user permission list
@@ -219,7 +216,7 @@ yunohost user permission list
   [...]
 ```
 
-Note that, for example, if we want to restrict permission for email so that only Bob is allowed to email, we should also remove `all_users` from the permission, by deleting it from the `all_users` group panel, or in CLI:
+Pour permettre seulement à Bob d'accéder aux emails en ligne de commande :
 
 ```bash
 yunohost user permission update mail --remove all_users --add bob
@@ -228,39 +225,39 @@ yunohost user permission update mail --remove all_users --add bob
 </TabItem>
 </Tabs>
 
-Note that some permissions may be "protected", meaning that you won't be able to add/remove the visitor group to this permission. Generally, this is because it would make no sense (or is a security risk) to do so.
+Notez que certaines permissions peuvent être « protégées », ce qui signifie que vous ne pourrez pas les ajouter/enlever du groupe Visiteurs. Ce mécanisme est généralement là car ajouter/enlever la permission n'a pas de sens (ou est un risque de sécurité).
 
-The webadmin will issue a warning if you set a permission that is superseded by a wider permission.
+La webadmin émettra un avertissement si vous définissez une permission qui est remplacée par une permission plus large.
 
 ![](/img/groups_alerte-permission.png)
 
-### Hide/display specific tiles in the user portal
+### Montrer/cacher les tuiles dans le portail utilisateur
 
-Since YunoHost 4.1, you can choose to hide/display specific tiles in the SSO.
+Depuis YunoHost 4.1, il est possible de montrer/cacher certaines tuiles dans le portail.
 
 <Tabs groupId="admin-commands">
 <TabItem value="web" label="From the web interface">
 
-In the webadmin, you can do so by going in the corresponding app view, go in `Manage label and tiles` and check/uncheck the option `Display the tile in the user portal` for the corresponding permission.
+Depuis la webadmin, vous pouvez changer cela en allant dans la vue de l'application à manipuler, puis dans `Gérer les étiquettes et les tuiles`, et cocher/décocher l'option `Montrer la tuile dans le portail utilisateur` pour la permission correspondante.
 
 </TabItem>
 <TabItem value="cli" label="From the command line">
 
-In command line, this may be done with:
+En ligne de commande, le même genre de chose peut être fait avec :
 
 ```bash
-# Enable the tile for the WordPress admin interface
+# Activer la tuile pour l'interface d'admin de WordPress
 yunohost user permission update wordpress.admin --show_tile True
 ```
 
 </TabItem>
 </Tabs>
 
-### Config alias group
+### Gérer les alias des groupes
 
-Each group can use mail aliases, but their configuration is only available from the CLI so far. For example, the `admins` group is configured with aliases such as `admins@domain.tld`, `root@domain.tld` ... : mail sent to these addresses will be dispatched to all members of the `admins` group.
+Chaque groupe peut utiliser des alias de mail, bien que leur configuration se fasse actuellement uniquement depuis la CLI. Par défaut, le groupe `admins` dispose ainsi de `admins@domain.tld`, `root@domain.tld` ... : les messages envoyés à ces adresses sont redirigés vers tous les membres du groupe `admins`.
 
-The command `yunohost user group info` will list them.
+L'utilisation de la commande `yunohost user group info` permet de lister tous les alias pour le groupe renseigné.
 
 ```bash
 yunohost user group info admins
@@ -275,8 +272,8 @@ yunohost user group info admins
   [...]
 ```
 
-To add a new mail, use the action `add-mailalias` or `remove-mailalias` to delete it.
+Il est possible de les ajouter avec l'action `add-mailalias` ou de les enlever avec `remove-mailalias`.
 
 ```bash
-yunohost user group add-mailalias <group> <address@domaine.tld>
+yunohost user group add-mailalias <groupe> <adresse@domaine.tld>
 ```
