--- a/docs/02.install/40.post_install/05.configuration.mdx
+++ b/docs/02.install/40.post_install/05.configuration.mdx
@@ -9,7 +9,7 @@ import TabItem from '@theme/TabItem';
 ## <FAIcon icon="fa-cog"/> Proceed with the initial configuration
 
 :::tip
-If you are in the process of restoring a server using a YunoHost backup, you should skip this step and instead [restore the backup instead of the postinstall step](/backup#restoring-during-the-postinstall).
+If you are in the process of restoring a server using a YunoHost backup, you should skip this step and instead restore the backup instead of the postinstall step](/administer/backups/#restoring-backups).
 :::
 
 :::note
@@ -128,4 +128,3 @@ For more detailed instructions, or to lean more about SSL/TLS certificates, see 
 ## <img src="/img/tada.png" height="30"/> Congratz!
 
 You now have a pretty well configured server. If you're new to YunoHost, we recommend to have a look at [the guided tour](/category/overview). You should also be able to [install your favourite applications](https://apps.yunohost.org/). Don't forget to [plan backups](/category/backups) !
-
