--- a/i18n/fr/docusaurus-plugin-content-docs/current.json
+++ b/i18n/fr/docusaurus-plugin-content-docs/current.json
@@ -1,20 +1,6 @@
 {
   "version.label": {
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
     "message": "Prochaine version",
-=======
-    "message": "Suivant",
->>>>>>> 6a20b15d (some French translations)
-=======
-    "message": "Prochaine version",
->>>>>>> 645e0dca (fixes from en templates to other languages)
-=======
-    "message": "Prochaine version",
->>>>>>> a43cf740 (fixes from en templates to other languages)
     "description": "The label for version current"
   },
   "sidebar.docsSidebar.category.Overview": {
@@ -35,36 +21,6 @@
   },
   "sidebar.docsSidebar.category.Providers.link.generated-index.title": {
     "message": "Fournisseurs",
-=======
-    "message": "Next",
-=======
-    "message": "Suivant",
->>>>>>> bfc7c981 (some French translations)
-    "description": "The label for version current"
-  },
-  "sidebar.docsSidebar.category.Overview": {
-    "message": "Aperçu général",
-    "description": "The label for category Overview in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Overview.link.generated-index.title": {
-    "message": "Aperçu général",
-    "description": "The generated-index page title for category Overview in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Install": {
-    "message": "Installation",
-    "description": "The label for category Install in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Providers": {
-    "message": "Fournisseurs",
-    "description": "The label for category Providers in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Providers.link.generated-index.title": {
-<<<<<<< HEAD
-    "message": "Providers",
->>>>>>> 0f286959 (init translations)
-=======
-    "message": "Fournisseurs",
->>>>>>> bfc7c981 (some French translations)
     "description": "The generated-index page title for category Providers in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Registrars": {
@@ -75,113 +31,57 @@
     "message": "OVH",
     "description": "The label for category OVH in sidebar docsSidebar"
   },
-  "sidebar.docsSidebar.category.VPN providers": {
-<<<<<<< HEAD
-<<<<<<< HEAD
+  "sidebar.docsSidebar.category.Fournisseurs VPN": {
     "message": "Fournisseurs VPN",
-    "description": "The label for category VPN providers in sidebar docsSidebar"
+    "description": "The label for category Fournisseurs VPN in sidebar docsSidebar"
+  },
+  "sidebar.docsSidebar.category.Installer sur...": {
+    "message": "Installer sur...",
+    "description": "The label for category Installer sur... in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.After installation": {
-    "message": "Après l’installation",
+    "message": "After installation",
     "description": "The label for category After installation in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.After installation.link.generated-index.description": {
-    "message": "Configurez le réseau pour accéder à votre serveur",
+    "message": "Configure your network to access your server",
     "description": "The generated-index page description for category After installation in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Administration guide": {
-    "message": "Guide d’administration",
+    "message": "Administration guide",
     "description": "The label for category Administration guide in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Administration guide.link.generated-index.title": {
-    "message": "Guide d’administration",
+    "message": "Administration guide",
     "description": "The generated-index page title for category Administration guide in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Administration guide.link.generated-index.description": {
-    "message": "Apprener à auto-héberger, installer et utiliser YunoHost",
+    "message": "Learn about self-hosting, how to install and use YunoHost",
     "description": "The generated-index page description for category Administration guide in sidebar docsSidebar"
   },
-  "sidebar.docsSidebar.category.Guided tour for the admin": {
+  "sidebar.docsSidebar.category.Visite guidée pour l’administrateur": {
     "message": "Visite guidée pour l’administrateur",
-    "description": "The label for category Guided tour for the admin in sidebar docsSidebar"
+    "description": "The label for category Visite guidée pour l’administrateur in sidebar docsSidebar"
   },
-  "sidebar.docsSidebar.category.Users and the SSO": {
-    "message": "Les utilisateurs et le SSO",
-    "description": "The label for category Users and the SSO in sidebar docsSidebar"
+  "sidebar.docsSidebar.category.Les utilisateusr et le SSO": {
+    "message": "Les utilisateusr et le SSO",
+    "description": "The label for category Les utilisateusr et le SSO in sidebar docsSidebar"
   },
-  "sidebar.docsSidebar.category.Domains": {
+  "sidebar.docsSidebar.category.Domaines": {
     "message": "Domaines",
-=======
-    "message": "VPN providers",
-=======
-    "message": "Fournisseurs VPN",
->>>>>>> bfc7c981 (some French translations)
-    "description": "The label for category VPN providers in sidebar docsSidebar"
+    "description": "The label for category Domaines in sidebar docsSidebar"
   },
-  "sidebar.docsSidebar.category.After installation": {
-    "message": "Après l’installation",
-    "description": "The label for category After installation in sidebar docsSidebar"
+  "sidebar.docsSidebar.category.Les applications": {
+    "message": "Les applications",
+    "description": "The label for category Les applications in sidebar docsSidebar"
   },
-  "sidebar.docsSidebar.category.After installation.link.generated-index.description": {
-    "message": "Configurez le réseau pour accéder à votre serveur",
-    "description": "The generated-index page description for category After installation in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Administration guide": {
-    "message": "Guide d’administration",
-    "description": "The label for category Administration guide in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Administration guide.link.generated-index.title": {
-    "message": "Guide d’administration",
-    "description": "The generated-index page title for category Administration guide in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Administration guide.link.generated-index.description": {
-    "message": "Apprener à auto-héberger, installer et utiliser YunoHost",
-    "description": "The generated-index page description for category Administration guide in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Guided tour for the admin": {
-    "message": "Visite guidée pour l’administrateur",
-    "description": "The label for category Guided tour for the admin in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Users and the SSO": {
-    "message": "Les utilisateurs et le SSO",
-    "description": "The label for category Users and the SSO in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Domains": {
-<<<<<<< HEAD
-    "message": "Domains",
->>>>>>> 0f286959 (init translations)
-=======
-    "message": "Domaines",
->>>>>>> bfc7c981 (some French translations)
-    "description": "The label for category Domains in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Applications": {
-    "message": "Applications",
-    "description": "The label for category Applications in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Upgrades": {
-<<<<<<< HEAD
-<<<<<<< HEAD
+  "sidebar.docsSidebar.category.Mises à jour": {
     "message": "Mises à jour",
-    "description": "The label for category Upgrades in sidebar docsSidebar"
+    "description": "The label for category Mises à jour in sidebar docsSidebar"
   },
-  "sidebar.docsSidebar.category.Migrating from 11.x to 12.x": {
-    "message": "Mettre à jour de 11.x à 12.x",
-=======
-    "message": "Upgrades",
-    "description": "The label for category Upgrades in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Migrating from 11.x to 12.x": {
-    "message": "Migrating from 11.x to 12.x",
->>>>>>> 0f286959 (init translations)
-=======
-    "message": "Mises à jour",
-    "description": "The label for category Upgrades in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Migrating from 11.x to 12.x": {
-    "message": "Mettre à jour de 11.x à 12.x",
->>>>>>> bfc7c981 (some French translations)
-    "description": "The label for category Migrating from 11.x to 12.x in sidebar docsSidebar"
+  "sidebar.docsSidebar.category.Migrer de 11.x vers 12.x": {
+    "message": "Migrer de 11.x vers 12.x",
+    "description": "The label for category Migrer de 11.x vers 12.x in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Backups": {
     "message": "Backups",
@@ -192,147 +92,75 @@
     "description": "The generated-index page title for category Backups in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Tutorials": {
-<<<<<<< HEAD
-<<<<<<< HEAD
-    "message": "Tutoriels",
-    "description": "The label for category Tutorials in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Tutorials.link.generated-index.title": {
-    "message": "Tutoriels",
-    "description": "The generated-index page title for category Tutorials in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Domains.link.generated-index.title": {
-    "message": "Domaines",
-    "description": "The generated-index page title for category Domains in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Troubleshooting": {
-    "message": "Dépannage",
-    "description": "The label for category Troubleshooting in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.User Guide": {
-    "message": "Guide d’utilisateur",
-    "description": "The label for category User Guide in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Community": {
-    "message": "Communauté",
-    "description": "The label for category Community in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Community.link.generated-index.title": {
-    "message": "Communauté",
-    "description": "The generated-index page title for category Community in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Contribute": {
-    "message": "Contribuer",
-    "description": "The label for category Contribute in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Write documentation": {
-    "message": "Rédiger la documentation",
-    "description": "The label for category Write documentation in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Packaging applications": {
-    "message": "Empaqueter une application",
-    "description": "The label for category Packaging applications in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Writing the app manifest": {
-    "message": "Rédiger le manifeste de l’application",
-    "description": "The label for category Writing the app manifest in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Writing app scripts": {
-    "message": "Rédiger les scripts de l’application",
-    "description": "The label for category Writing app scripts in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Advanced": {
-    "message": "Avancé",
-    "description": "The label for category Advanced in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Advanced.link.generated-index.title": {
-    "message": "Avancé",
-    "description": "The generated-index page title for category Advanced in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Misc resources": {
-    "message": "Ressources diverses",
-    "description": "The label for category Misc resources in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Misc resources.link.generated-index.title": {
-    "message": "Ressources diverses",
-    "description": "The generated-index page title for category Misc resources in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Contributing to the core": {
-    "message": "Contribuer au noyau",
-=======
     "message": "Tutorials",
-=======
-    "message": "Tutoriels",
->>>>>>> bfc7c981 (some French translations)
     "description": "The label for category Tutorials in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Tutorials.link.generated-index.title": {
-    "message": "Tutoriels",
+    "message": "Tutorials",
     "description": "The generated-index page title for category Tutorials in sidebar docsSidebar"
   },
+  "sidebar.docsSidebar.category.Domains": {
+    "message": "Domains",
+    "description": "The label for category Domains in sidebar docsSidebar"
+  },
   "sidebar.docsSidebar.category.Domains.link.generated-index.title": {
-    "message": "Domaines",
+    "message": "Domains",
     "description": "The generated-index page title for category Domains in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Troubleshooting": {
-    "message": "Dépannage",
+    "message": "Troubleshooting",
     "description": "The label for category Troubleshooting in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.User Guide": {
-    "message": "Guide d’utilisateur",
+    "message": "User Guide",
     "description": "The label for category User Guide in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Community": {
-    "message": "Communauté",
+    "message": "Community",
     "description": "The label for category Community in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Community.link.generated-index.title": {
-    "message": "Communauté",
+    "message": "Community",
     "description": "The generated-index page title for category Community in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Contribute": {
-    "message": "Contribuer",
+    "message": "Contribute",
     "description": "The label for category Contribute in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Write documentation": {
-    "message": "Rédiger la documentation",
+    "message": "Write documentation",
     "description": "The label for category Write documentation in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Packaging applications": {
-    "message": "Empaqueter une application",
+    "message": "Packaging applications",
     "description": "The label for category Packaging applications in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Writing the app manifest": {
-    "message": "Rédiger le manifeste de l’application",
+    "message": "Writing the app manifest",
     "description": "The label for category Writing the app manifest in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Writing app scripts": {
-    "message": "Rédiger les scripts de l’application",
+    "message": "Writing app scripts",
     "description": "The label for category Writing app scripts in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Advanced": {
-    "message": "Avancé",
+    "message": "Advanced",
     "description": "The label for category Advanced in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Advanced.link.generated-index.title": {
-    "message": "Avancé",
+    "message": "Advanced",
     "description": "The generated-index page title for category Advanced in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Misc resources": {
-    "message": "Ressources diverses",
+    "message": "Misc resources",
     "description": "The label for category Misc resources in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Misc resources.link.generated-index.title": {
-    "message": "Ressources diverses",
+    "message": "Misc resources",
     "description": "The generated-index page title for category Misc resources in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Contributing to the core": {
-<<<<<<< HEAD
     "message": "Contributing to the core",
->>>>>>> 0f286959 (init translations)
-=======
-    "message": "Contribuer au noyau",
->>>>>>> bfc7c981 (some French translations)
     "description": "The label for category Contributing to the core in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.link.Applications": {
@@ -342,22 +170,5 @@
   "sidebar.docsSidebar.link.Forum": {
     "message": "Forum",
     "description": "The label for link Forum in sidebar docsSidebar, linking to https://forum.yunohost.org"
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
->>>>>>> 0292e59c (yarn write-translations)
-  },
-  "sidebar.docsSidebar.category.Fournisseurs VPN": {
-    "message": "Fournisseurs VPN",
-    "description": "The label for category Fournisseurs VPN in sidebar docsSidebar"
-  },
-  "sidebar.docsSidebar.category.Install on...": {
-    "message": "Install on...",
-    "description": "The label for category Install on... in sidebar docsSidebar"
-<<<<<<< HEAD
-=======
->>>>>>> 0f286959 (init translations)
-=======
->>>>>>> 0292e59c (yarn write-translations)
   }
 }
